tests/cases/compiler-development/artifact/errors/diagnostic-struct-literal-duplicate-field.diagnostic
diagnostic error code=T0001 family=type message="duplicate field 'x' in struct literal" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/structs/errors/struct-literal-duplicate-field.ari" display="tests/cases/structs/errors/struct-literal-duplicate-field.ari" bytes=119
  Label index=0 role=primary source_id=0 source="tests/cases/structs/errors/struct-literal-duplicate-field.ari" line=7 column=15 end_line=7 end_column=20 byte_start=71 byte_end=76 message=""
  Snippet label=0 text="  --> tests/cases/structs/errors/struct-literal-duplicate-field.ari:7:15\n   |\n 7 |   let point = Point { x: 1, x: 2, y: 3 };\n   |               ^^^^^"
